@@ -8,9 +8,9 @@
 
 <div class="content-row">
 	<div class="row">
-	    <div class="columns large-6">
+	    <div class="columns small-8">
 	        <h1><a href="<?php echo erLhcoreClassDesign::baseurl()?>" title="<?php echo erTranslationClassLhTranslation::getInstance()->getTranslation('pagelayout/pagelayout','Home')?>"><img src="<?php echo erLhcoreClassDesign::design('images/general/logo.png');?>" alt="<?php echo erConfigClassLhConfig::getInstance()->getSetting( 'site', 'title' )?>" title="<?php echo erConfigClassLhConfig::getInstance()->getSetting( 'site', 'title' )?>"></a></h1>
-	    </div>
+	    </div>	    
 	</div>
 	<div class="row">
 		<div class="columns large-12">
