@@ -3604,6 +3604,20 @@
                 "hidden": "0"
             },
             {
+                "identifier": "show_language_switcher",
+                "value": "0",
+                "type": "0",
+                "explain": "Show users option to switch language at widget",
+                "hidden": "0"
+            },
+            {
+                "identifier": "show_languages",
+                "value": "eng,lit,hrv,esp,por,nld,ara,ger,pol,rus,ita,fre,chn,cse,nor,tur,vnm,idn,sve,per,ell,dnk,rou,bgr,tha,geo,fin,alb",
+                "type": "0",
+                "explain": "Between what languages user should be able to switch",
+                "hidden": "0"
+            },
+            {
                 "identifier": "xmp_data",
                 "value": "a:14:{i:0;b:0;s:4:\"host\";s:15:\"talk.google.com\";s:6:\"server\";s:9:\"gmail.com\";s:8:\"resource\";s:6:\"xmpphp\";s:4:\"port\";s:4:\"5222\";s:7:\"use_xmp\";i:0;s:8:\"username\";s:0:\"\";s:8:\"password\";s:0:\"\";s:11:\"xmp_message\";s:78:\"New chat request [{chat_id}]\r\n{messages}\r\nClick to accept a chat\r\n{url_accept}\";s:10:\"recipients\";s:0:\"\";s:20:\"xmp_accepted_message\";s:69:\"{user_name} has accepted a chat [{chat_id}]\r\n{messages}\r\n{url_accept}\";s:16:\"use_standard_xmp\";i:0;s:15:\"test_recipients\";s:0:\"\";s:21:\"test_group_recipients\";s:0:\"\";}",
                 "type": "0",
